--- a/.gitignore
+++ b/.gitignore
@@ -130,8 +130,8 @@ dmypy.json
 
 #vs code
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 *.code-workspace
